# platform.upstream.gstreamer-vaapi

./: .gitmodules  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gstreamer-vaapi-0.5.2.tar.bz2.delta  gstreamer-vaapi-0.5.2.tar.bz2.id  gstreamer-vaapi-0.5.3.tar.bz2.delta  gstreamer-vaapi-0.5.3.tar.bz2.id  project.config  set-vaapi-gst1.0-env.sh
debian.upstream/: Makefile.in  changelog  control  gstreamer0.10-vaapi-doc.install  gstreamer0.10-vaapi.install  gstreamer1.0-vaapi-doc.install  gstreamer1.0-vaapi.install  libgstvaapi-dev.install  libgstvaapi-drm-0.install  libgstvaapi-drm-1.install  libgstvaapi-glx-0.install  libgstvaapi-glx-1.install  libgstvaapi-wayland-0.install  libgstvaapi-wayland-1.install  libgstvaapi-x11-0.install  libgstvaapi-x11-1.install  libgstvaapi0.install  libgstvaapi1.install
docs/: Makefile.in
docs/reference/: Makefile.in
docs/reference/libs/: Makefile.in  libs-docs.xml
docs/reference/libs/html/: GstVaapiContext.html  GstVaapiDisplay.html  GstVaapiDisplayGLX.html  GstVaapiDisplayX11.html  GstVaapiImagePool.html  GstVaapiObject.html  GstVaapiSubpicture.html  GstVaapiSurfacePool.html  GstVaapiTexture.html  GstVaapiWindow.html  (+26 more)
docs/reference/plugins/: Makefile.in  plugins-docs.xml
ext/: Makefile.in
ext/videoutils/: Makefile.am  TAG  autogen.sh  configure.ac
ext/videoutils/tests/check/libs/: Makefile.am  video.c
gst/: Makefile.in
gst-libs/: Makefile.in
gst-libs/gst/: Makefile.am  Makefile.in
gst-libs/gst/bitwriter/: Makefile.am  gstbitwriter.c  gstbitwriter.h
gst-libs/gst/codecparsers/: Makefile.in
gst-libs/gst/vaapi/: .VERSION.pkg  Makefile.am  Makefile.in  gstvaapibaseencoder.c  gstvaapibaseencoder.h  gstvaapicontext.c  gstvaapicontext.h  gstvaapidebug.h  gstvaapidecoder.c  gstvaapidecoder.h  gstvaapidecoder_h264.c  gstvaapidecoder_jpeg.c  gstvaapidecoder_mpeg2.c  gstvaapidecoder_mpeg4.c  gstvaapidecoder_objects.c  gstvaapidecoder_objects.h  gstvaapidecoder_priv.h  gstvaapidecoder_vc1.c  gstvaapidisplay.c  gstvaapidisplay_wayland.c  gstvaapidisplay_x11.c  gstvaapiencoder.c  gstvaapiencoder.h  gstvaapiencoder_h263.c  gstvaapiencoder_h263.h  gstvaapiencoder_h264.c  gstvaapiencoder_h264.h  gstvaapiencoder_h264_priv.h  gstvaapiencoder_mpeg2.c  gstvaapiencoder_mpeg2.h  gstvaapiencoder_mpeg2_priv.h  gstvaapiencoder_mpeg4.c  gstvaapiencoder_mpeg4.h  gstvaapiencoder_objects.c  gstvaapiencoder_objects.h  gstvaapiencoder_priv.h  gstvaapiimage.c  gstvaapiimage.h  gstvaapiimagepool.c  gstvaapiprofile.c  (+24 more)
gst-libs/gst/video/: Makefile.in
gst/vaapi/: Makefile.am  Makefile.in  gstvaapi.c  gstvaapidecode.c  gstvaapidecode.h  gstvaapidownload.c  gstvaapiencode.c  gstvaapiencode.h  gstvaapiencode_h263.c  gstvaapiencode_h263.h  gstvaapiencode_h264.c  gstvaapiencode_h264.h  gstvaapiencode_mpeg2.c  gstvaapiencode_mpeg2.h  gstvaapiencode_mpeg4.c  gstvaapiencode_mpeg4.h  gstvaapipluginbase.c  gstvaapipluginbuffer.h  gstvaapipostproc.c  gstvaapisink.c  gstvaapisink.h  gstvaapiupload.c  gstvaapiupload.h  gstvaapiuploader.c  gstvaapiuploader.h  gstvaapivideomemory.c
packaging/: codecparsers.tar.bz2  gitmodules.sh  gstreamer-vaapi.changes  gstreamer-vaapi.spec  upstream.tar.bz2  videoutils.tar.bz2
pkgconfig/: Makefile.in
tests/: Makefile.in  decoder.c  test-windows.c
(+50 files in other folders)
